{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 574,
  "lineage": "923b7198-a4ca-3271-ed75-097af898f7ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4cf8e0b209579bc",
            "associate_with_private_ip": "192.168.8.8",
            "association_id": "eipassoc-0a4dd32298d465341",
            "domain": "vpc",
            "id": "eipalloc-0b4cf8e0b209579bc",
            "instance": "i-027368366d32af2fd",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0face55f8630c64ea",
            "private_dns": "ip-192-168-8-8.eu-central-1.compute.internal",
            "private_ip": "192.168.8.8",
            "public_dns": "ec2-18-184-61-248.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.61.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_parameter_group.default",
            "aws_db_subnet_group.my_db_subnet_group",
            "aws_instance.phonebook_instance",
            "aws_internet_gateway.gw",
            "aws_network_interface.my_network_interface",
            "aws_security_group.phbook_sg",
            "aws_subnet.my_subnet",
            "aws_subnet.my_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phonebook_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-070b208e993b59cea",
            "arn": "arn:aws:ec2:eu-central-1:483998710292:instance/i-027368366d32af2fd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027368366d32af2fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0face55f8630c64ea"
              }
            ],
            "primary_network_interface_id": "eni-0face55f8630c64ea",
            "private_dns": "ip-192-168-8-8.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.8.8",
            "public_dns": "ec2-3-68-219-245.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.219.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0163dc4377a2a116a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cc9a0ff960237ba",
            "tags": {
              "Name": "Test server for lesson 33",
              "Owner": "Serhii Hordiienko"
            },
            "tags_all": {
              "Name": "Test server for lesson 33",
              "Owner": "Serhii Hordiienko"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011ed518a614f6f33"
            ]
          },
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_parameter_group.default",
            "aws_db_subnet_group.my_db_subnet_group",
            "aws_internet_gateway.gw",
            "aws_network_interface.my_network_interface",
            "aws_security_group.phbook_sg",
            "aws_subnet.my_subnet",
            "aws_subnet.my_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:internet-gateway/igw-03bcda1a6760b2520",
            "id": "igw-03bcda1a6760b2520",
            "owner_id": "483998710292",
            "tags": {
              "Name": "lesson33"
            },
            "tags_all": {
              "Name": "lesson33"
            },
            "vpc_id": "vpc-073b24e3e8890027b"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:network-interface/eni-0face55f8630c64ea",
            "id": "eni-0face55f8630c64ea",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:37:46:8c:5f:ba",
            "owner_id": "483998710292",
            "private_dns_name": "ip-192-168-8-8.eu-central-1.compute.internal",
            "private_ip": "192.168.8.8",
            "private_ip_list": [
              "192.168.8.8"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.8.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-011ed518a614f6f33"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cc9a0ff960237ba",
            "tags": {
              "Name": "lesson33"
            },
            "tags_all": {
              "Name": "lesson33"
            }
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.phbook_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:route-table/rtb-087f70e029faa2898",
            "id": "rtb-087f70e029faa2898",
            "owner_id": "483998710292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bcda1a6760b2520",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bcda1a6760b2520",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson33"
            },
            "tags_all": {
              "Name": "lesson33"
            },
            "timeouts": null,
            "vpc_id": "vpc-073b24e3e8890027b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a74d0d0888b0948",
            "route_table_id": "rtb-087f70e029faa2898",
            "subnet_id": "subnet-03cc9a0ff960237ba"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.my_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "phbook_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:security-group/sg-011ed518a614f6f33",
            "description": "HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011ed518a614f6f33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PING",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Test security group for lesson 33",
            "name_prefix": "",
            "owner_id": "483998710292",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-073b24e3e8890027b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:subnet/subnet-03cc9a0ff960237ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cc9a0ff960237ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483998710292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson33"
            },
            "tags_all": {
              "Name": "lesson33"
            },
            "vpc_id": "vpc-073b24e3e8890027b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:subnet/subnet-06231780621983bee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06231780621983bee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483998710292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson33"
            },
            "tags_all": {
              "Name": "lesson33"
            },
            "vpc_id": "vpc-073b24e3e8890027b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:483998710292:vpc/vpc-073b24e3e8890027b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c0c70e7291516f7a",
            "default_route_table_id": "rtb-0414b6d8368c38784",
            "default_security_group_id": "sg-021865b2e6c4fea61",
            "dhcp_options_id": "dopt-0a0d0c558f377b6d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073b24e3e8890027b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0414b6d8368c38784",
            "owner_id": "483998710292",
            "tags": {
              "Name": "lesson33"
            },
            "tags_all": {
              "Name": "lesson33"
            }
          }
        }
      ]
    }
  ]
}